# skald

./: .dockerignore  .gitattributes  .gitignore  .gitleaks.toml  .gitmessage  .gitmodules  .markdownlint-cli2.mjs  .yamllint.yml  Cargo.toml  Criterion.toml  README.md  REUSE.toml  SECURITY.md  build.rs  cliff.toml  clippy.toml  codecov.yml  commit-types.toml  committed.toml  deny.toml  lefthook.yml  mise.toml  package.json  pnpm-lock.yaml  rust-toolchain.toml  taplo.toml  tarpaulin.toml  tomlfmt.toml
.cargo/: audit.toml  config.toml  mutants.toml
.github/: actionlint.yaml
.github/workflows/: bump-version.yml  ci.yml  nightly.yml  perf.yml  publish.yml  release.yml  scorecard.yml
crates/skald/: Cargo.toml  README.md
crates/skald-ast/: Cargo.toml  README.md
crates/skald-ast/src/: lib.rs  node.rs
crates/skald-ast/src/composer/: mod.rs
crates/skald-ast/src/emitter/: mod.rs  sink.rs
crates/skald-bench/: Cargo.toml  README.md
crates/skald-bench/benches/: composer.rs  emitter.rs  end_to_end.rs  parser.rs  scanner.rs  serde.rs
crates/skald-bench/src/: fixtures.rs  lib.rs
crates/skald-core/: Cargo.toml  README.md
crates/skald-core/src/: error.rs  lib.rs  limits.rs  types.rs
crates/skald-core/src/parser/: event.rs  mod.rs
crates/skald-core/src/scanner/: chars.rs  mod.rs  swar.rs  token.rs
crates/skald-cst/: Cargo.toml  README.md
crates/skald-cst/src/: builder.rs  document.rs  green.rs  kind.rs  lib.rs  red.rs
crates/skald-cst/tests/: integration.rs
crates/skald-fmt/: Cargo.toml  README.md
crates/skald-fmt/src/: lib.rs  main.rs
crates/skald-fuzz/: Cargo.toml  README.md
crates/skald-fuzz/corpus/seed/: anchors_aliases.yaml  basic_mapping.yaml  block_scalars.yaml  flow_collections.yaml  multi_doc.yaml
crates/skald-fuzz/fuzz_targets/: fuzz_cst_roundtrip.rs  fuzz_limits.rs  fuzz_lossless_edit.rs  fuzz_merge_keys.rs  fuzz_parser.rs  fuzz_round_trip.rs  fuzz_scanner.rs  fuzz_serde.rs
crates/skald-lsp/: Cargo.toml  README.md
crates/skald-lsp/src/: lib.rs  main.rs
crates/skald-mcp/: Cargo.toml  README.md
crates/skald-mcp/src/: lib.rs  main.rs
crates/skald-schema/: Cargo.toml  README.md
crates/skald-schema/src/: coerce.rs  lib.rs  schema.rs  validate.rs
crates/skald-serde/: Cargo.toml  README.md
crates/skald-serde/src/: borrowed.rs  de.rs  error.rs  lib.rs  ser.rs  stream_ser.rs  styled.rs  value.rs
crates/skald-serde/tests/: serialize_differential.rs
crates/skald-validate/: Cargo.toml  README.md
crates/skald-validate/src/: lib.rs  main.rs
crates/skald-wasm/: Cargo.toml  README.md
crates/skald-wasm/src/: lib.rs
crates/skald-yaml-test-suite/: Cargo.toml  README.md
crates/skald-yaml-test-suite/src/: lib.rs
crates/skald-yaml-test-suite/tests/: round_trip_fidelity.rs  yaml_test_suite.rs
crates/skald/src/: lib.rs
crates/skald/tests/: integration.rs
docs/: supply-chain.md  troubleshooting.md
docs/benchmarks/: 2026-06-03-baseline.md
scripts/: commit-config.py  file-hygiene.py
supply-chain/: audits.toml  config.toml
