[package]
name = "skald-schema"
description = "Hand-rolled, Span-anchored JSON-Schema validation over the Skald Node tree."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
skald-ast.workspace = true
skald-core.workspace = true
skald-cst.workspace = true
