[package]
name = "skald-serde"
description = "Serde integration for the skald YAML library"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
skald-ast.workspace = true
skald-core.workspace = true
