[package]
name = "skald-validate"
description = "CLI: validate YAML against a JSON-Schema with comment-preserving autofix."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
skald = { workspace = true, features = ["schema"] }

[[bin]]
name = "skald-validate"
path = "src/main.rs"
