[package]
name = "skald-yaml-test-suite"
description = "YAML test suite integration for skald (dev-only, not published)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
skald = { workspace = true, features = ["cst"] }
skald-core.workspace = true

[[test]]
name = "yaml_test_suite"
path = "tests/yaml_test_suite.rs"

[[test]]
name = "round_trip_fidelity"
path = "tests/round_trip_fidelity.rs"
